implementing sign in with user name and password and unified login